tests/rosetta/out/Haskell/anagrams-deranged-anagrams.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/anagrams-deranged-anagrams.hs:144:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/anagrams-deranged-anagrams.hs:137:1
                 /workspace/mochi/tests/rosetta/out/Haskell/anagrams-deranged-anagrams.hs:144:1
    |
144 | main = do
    | ^^^^
